<resources>
    <string name="app_name">FIT-FK UNPAD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifikasi</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">Tentang Kami</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Order</item>
        <item>Q-Pay</item>
    </string-array>
    <string-array name="jam_quiz">
        <item>6</item>
        <item>Q-Pay</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_oreder">Profil</string>
    <string name="nav_qpay">Q-Pay</string>
    <string name="nav_faq">F.A.Q</string>
    <string name="nav_support">Support</string>
    <string name="nav_logout">Keluar</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="saldo">Saldo :</string>
    <string name="wdraw">WITHDRAW</string>
    <string name="tagihan">Tagihan :</string>
    <string name="nilaipopup">Nilai Top-Up</string>
    <string name="kode_unik">Kode Unik</string>
    <string name="total">Total</string>
    <string name="tf_bayar">Silahkan Segera Bayar Tagihan Anda Ke Salah Satu Rekening Di Bawah Ini :</string>
    <string name="cimb_tf">CIMB Niaga 800149485800 a/n. PT. Privateku Global Indo</string>
    <string name="redeem">REDEEM</string>
    <string name="voucher_code">voucher code</string>
    <string name="tgl_mulai">Tgl Mulai</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="durasi">Durasi</string>
    <string name="jsiswa">Jml Siswa</string>
    <string name="catatan">Catatan :</string>
    <string name="tmptles">Tempat Les :</string>
    <string name="tarif">Tarif (Cash)</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="no_hp">No. Handphone</string>
    <string name="piljenjang_mgjr">Pilihan Jenjang Mengajar</string>
    <string name="matpel">Mata Pelajaran</string>
    <string name="terima">TERIMA</string>
    <string name="tolak">TOLAK</string>
    <string name="resetpassword">Lupa Kata Sandi</string>

    <string name="fpwd_q">Apakah anda lupa password ?</string>
    <string name="fpwd">Masukan e-mail yang anda gunakan untuk mendaftar TentorQ,Password baru akan di kirimkan ke e-mail tersebut.</string>
    <string name="topup">Topup</string>
    <string name="konfirmasibayar">Sudah Bayar</string>
    <string name="penyelenggara">Penyelenggara</string>
    <string name="ldiklat">List Diklat</string>
    <!--<string name="transkrip_akademik">Transkrip Akademik</string>-->
    <string name="lomba">Lomba</string>
    <string name="lowongan_kerja">Lowongan Kerja</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="action_Qlogout">Apakah Anda Yakin ??</string>
    <string name="save">Simpan</string>
    <string name="app_login">Silahkan Masuk</string>
    <string name="app_daftar">Silahkan Untuk Mendaftar Secara Gratis</string>

    <string name="desc">Step Count</string>
    <string name="title1">Today</string>
    <string name="unit1">Steps</string>

    <string name="ok">OK</string>

    <string name="connect_to_shealth">Connect to Samsung Health</string>

    <string name="notice">Notice</string>
    <string name="msg_perm_acquired">All permissions should be acquired</string>
    <string name="msg_conn_not_available">Connection with Samsung Health is not available</string>
    <string name="msg_req_install">Please install Samsung Health</string>
    <string name="msg_req_upgrade">Please upgrade Samsung Health</string>
    <string name="msg_req_enable">Please enable Samsung Health</string>
    <string name="msg_req_agree">Please agree with Samsung Health policy</string>
    <string name="msg_req_available">Please make Samsung Health available</string>
</resources>
