<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:toggle="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--Nama -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Status"/>

            <RelativeLayout
                android:id="@+id/rl_statususer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/status_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:text=""
                    android:textStyle="bold"/>


            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"/>

            <EditText
                android:id="@+id/Profile_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/Profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/draw_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_hp"/>

            <EditText
                android:id="@+id/Profile_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/piljenjang_mgjr"/>

            <ListView
                android:id="@+id/list_jenjang"
                android:layout_width="match_parent"
                android:layout_height="140dp"></ListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/matpel"/>

            <ListView
                android:id="@+id/list_matpel"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="7dp"></ListView>
        </LinearLayout>
    </ScrollView>
    <!--Email -->
    <!--No HP-->
    <!--Pilih Jenjang -->
    <!--Mata Pelajaran -->

</LinearLayout>