<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/saldo"
            android:textColor="#dd2d2424"
            android:textSize="12pt"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progress_saldoqpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/Tvqpay_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:text="Rp.0"
            android:textColor="#dd2d2424"
            android:textSize="12pt"
            android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/Btn_qpaywd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wdraw"
            android:textColor="@color/colorwhite"
            android:textStyle="bold"
            android:theme="@style/MyButtonNormal"/>

        <Button
            android:id="@+id/Btn_topup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topup"
            android:textColor="@color/colorwhite"
            android:textStyle="bold"
            android:theme="@style/MyButtonAccent"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_topup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="7dp"
            app:cardBackgroundColor="@color/colorwhite"
            app:cardCornerRadius="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tagihan"
                    android:textColor="#dd2d2424"
                    android:textSize="8pt"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/nilaipopup"
                        android:textColor="#dd2d2424"
                        android:textColorLink="@color/cardview_shadow_start_color"
                        android:textSize="7pt"/>

                    <TextView
                        android:id="@+id/tv_nilaitopup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="Rp.0000"
                        android:textColor="#dd2d2424"
                        android:textColorLink="@color/cardview_shadow_start_color"
                        android:textSize="7pt"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/kode_unik"
                        android:textColor="#dd2d2424"
                        android:textColorLink="@color/cardview_shadow_start_color"
                        android:textSize="7pt"/>

                    <TextView
                        android:id="@+id/tv_kodeunik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text=""
                        android:textColor="#dd2d2424"
                        android:textColorLink="@color/cardview_shadow_start_color"
                        android:textSize="7pt"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- TOTAL-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:text="@string/total"
                android:textColor="#dd2d2424"
                android:textColorLink="@color/cardview_shadow_start_color"
                android:textSize="10pt"/>

            <TextView
                android:id="@+id/tv_totalqpay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Rp.0"
                android:textColor="#dd2d2424"
                android:textColorLink="@color/cardview_shadow_start_color"
                android:textSize="10pt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tf_bayar"
                android:textColor="#dd2d2424"
                android:textColorLink="@color/cardview_shadow_start_color"/>

            <TextView
                android:id="@+id/no_rektujuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/cimb_tf"
                android:textColor="#dd2d2424"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_status_verifikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Sedang Diverifikasi"
                android:textStyle="bold"
                android:visibility="gone"/>

            <Button
                android:id="@+id/Btn_KonfirmSdahbayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/konfirmasibayar"
                android:textColor="@color/colorwhite"
                android:textStyle="bold"
                android:theme="@style/MyButtongreens"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>