<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btn_Iprogram"
                            android:layout_width="54dp"
                            android:layout_height="54dp"
                            android:background="@drawable/circle_bg_purple"
                            android:padding="10dp"
                            android:src="@drawable/ic_programs" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="Program" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btn_transkrip"
                            android:layout_width="54dp"
                            android:layout_height="54dp"
                            android:background="@drawable/circle_bg_orange"
                            android:padding="10dp"
                            android:src="@drawable/ic_filetranskrip" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="7dp"
                           />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btn_Lomba"
                            android:layout_width="54dp"
                            android:layout_height="54dp"
                            android:background="@drawable/circle_bg_green"
                            android:padding="10dp"
                            android:src="@drawable/ic_lomba" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="@string/lomba" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btn_loker"
                            android:layout_width="54dp"
                            android:layout_height="54dp"
                            android:background="@drawable/circle_bg_red"
                            android:padding="10dp"
                            android:src="@drawable/ic_pekerjaan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="7dp"
                            android:text="@string/lowongan_kerja" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:id="@+id/btn_blog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="54dp"
                            android:layout_height="54dp"
                            android:background="@drawable/circle_bg_blue"
                            android:padding="10dp"
                            android:src="@drawable/ic_blog" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="Blog" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:id="@+id/btn_notifikasi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="54dp"
                            android:layout_height="54dp"
                            android:background="@drawable/circle_bg_pink"
                            android:padding="10dp"
                            android:src="@drawable/ic_notofikasi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="@string/notifikasi" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>